--- a/src/components/Modal/modal.module.css
+++ b/src/components/Modal/modal.module.css
@@ -1,17 +1,20 @@
-.Overlay {
+.backdrop {
   position: fixed;
+  z-index: 999;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
+  background-color: rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1200;
 }
 
-.Modal {
-  max-width: calc(100vw - 48px);
-  max-height: calc(100vh - 24px);
+.modal {
+  padding: 16px;
+  max-width: 900px;
+  width: 100%;
+  min-height: 520px;
+  background-color: #fff;
 }
